# gameboy-emulator

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: cpu.rs  instruction.rs  lib.rs  main.rs  memory.rs
src/cpu/: flags.rs  registers.rs  state.rs
src/instruction/: decode.rs  execute.rs  flag_adjustment.rs  opcode.rs  tests.rs
src/instruction/tests/: accumulator_address.rs  di.rs  ei.rs  halt.rs  inc_dec_r8.rs  ld_memhl_r8.rs  ld_r16_imm16.rs  ld_r8_imm8.rs  ld_r8_memhl.rs  opcode_coverage.rs
src/memory/: bus.rs  flat_memory.rs
tests/: sm83_conformance.rs
