[package]
name = "gameboy-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
comfy-table = "7"
owo-colors = { version = "4", features = ["supports-colors"] }

[features]
default = []
opcode-coverage = []
sm83-conformance = ["dep:serde", "dep:serde_json"]
